# lh2_final

./: .gitignore  COMPLETED_WORK_SUMMARY.md  DIFFERENCES.md  ENERGY_BALANCE_SUMMARY.md  FINAL_STATUS.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE_VENTING.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  SECURITY_SUMMARY.md  SECURITY_SUMMARY_VENTING.md  output.txt  paper_rundown.md  project_instructions.md  pyproject.toml  requirements.txt  warnings_and_errors.txt
.github/: copilot-instructions.md
LLNL_model/: LH2Control.m  LH2Simulate.m  cylVToH.m  runNominal.m
docs/: ENERGY_BALANCE_IMPLEMENTATION.md
examples/: README.md  SIMPLE_VENTING_README.md  basic_usage.py  complete_simulation.py  simple_venting.py
lh2sim/: __init__.py
lh2sim/control/: __init__.py  control.py
lh2sim/flow/: __init__.py  flow.py
lh2sim/geometry/: __init__.py  geometry.py
lh2sim/parameters/: __init__.py  parameters.py
lh2sim/properties/: __init__.py  plot_phase_diagram.py  properties.py
lh2sim/simulation/: __init__.py  energy_balance.py  simulation.py
lh2sim/visualization/: __init__.py  visualization.py
matlab_codebases/: llnl_rundown.md
matlab_codebases/LLNL_model/: Data_extraction.m  inputs_TrailerToDewar.m  plotLH2Data.m  vaporpressure.m
matlab_codebases/paper_model/: Data_extraction.m  (+7 more)
paper_model/: CreateXLSTXT.m  LH2Control.m  LH2Control_pump.m  LH2Simulate_Pump.m  MAIN.m  Parameters_MainToOnboard_PressDiff.m  Parameters_TrailerToMain_PressDiff.m  Parameters_TrailerToMain_Pump_InitialBlowdown_PlugPower.m  README.md  gasFlow.m  vaporpressure.m  waitbartime.m
(+8 files in other folders)
